@@ -86,23 +86,23 @@ proc gdb_delete_tracepoints {} {
     }
 }
 
-#
-# Procedure: gdb_trace_setactions
 #   Define actions for a tracepoint.
 #   Arguments:
+#       actions_command -- the command used to create the actions.
+#                          either "actions" or "commands".
 #	testname   -- identifying string for pass/fail output
-#	tracepoint -- to which tracepoint do these actions apply? (optional)
+#	tracepoint -- to which tracepoint(s) do these actions apply? (optional)
 #	args       -- list of actions to be defined.
 #   Returns:
 #	zero       -- success
 #	non-zero   -- failure
 
-proc gdb_trace_setactions { testname tracepoint args } {
+proc gdb_trace_setactions_command { actions_command testname tracepoint args } {
     global gdb_prompt;
 
     set state 0;
     set passfail "pass";
-    send_gdb "actions $tracepoint\n";
+    send_gdb "$actions_command $tracepoint\n";
     set expected_result "";
     gdb_expect 5 {
 	-re "No tracepoint number .*$gdb_prompt $" {
@@ -163,6 +163,20 @@ proc gdb_trace_setactions { testname tracepoint args } {
     } else {
 	return 1;
     }
+}
+
+# Define actions for a tracepoint, using the "actions" command.  See
+# gdb_trace_setactions_command.
+#
+proc gdb_trace_setactions { testname tracepoint args } {
+    eval gdb_trace_setactions_command "actions" {$testname} {$tracepoint} $args
+}
+
+# Define actions for a tracepoint, using the "commands" command.  See
+# gdb_trace_setactions_command.
+#
+proc gdb_trace_setcommands { testname tracepoint args } {
+    eval gdb_trace_setactions_command "commands" {$testname} {$tracepoint} $args
 }
 
 #
